# streamlits-playground

./: README.md  pyproject.toml
coin_csv/: coin_csv.py  coin_data.csv
